...
    <string name="msg_description_2">Registra una tarjeta de crédito.</string>
    <string name="title_option_3">Ahorros</string>
    <string name="msg_description_3">Registra tus ahorros.</string>

    <!-- * Payment methods income concept dialog -->
    <string name="title_concept_of_income">Concepto del ingreso *</string>
    <string name="error_concept_of_income">El concepto es obligatorio</string>

    <!-- * Dialog buttons -->
    <string name="msg_accept">Aceptar</string>
    <string name="msg_cancel">Cancelar</string>

    <!-- * Cash dialog -->
    <string name="title_cash_amount">Monto en efectivo *</string>
    <string name="error_amount">El monto no puede estar vacío</string>

    <!-- * Food coupon dialog -->
    <string name="title_food_coupon_amount">Monto de vales o cupones de despensa *</string>

    <!-- * Payment methods activity -->
    <string name="title_payment_methods">Metodos de pago</string>
    <string name="title_alert_empty_payment_methods">¡Hey!</string>
    <string name="msg_alert_empty_payment_methods">Agrega algun método de pago para continuar.</string>
    <string name="msg_action_bar_edit_action">Editar</string>

    <!-- * payment methods types -->
    <string name="msg_food_coupons">Vales de despensa</string>
    <string name="msg_cash">Efectivo</string>
    <string name="msg_credit_card">Tarjeta de crédito</string>
    <string name="msg_debit_card">Tarjeta de débito</string>

    <!-- * debit card -->
    <string name="title_debit_card">Nueva tarjeta de débito</string>
    <string name="msg_debit_card_name">Nombre de la tarjeta *</string>
    <string name="msg_debit_card_number">Número *</string>
    <string name="msg_debit_card_amount">Monto *</string>
...
