...
        android:layout_marginTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:theme="@style/IncomeConceptTextInputLayout">

        <EditText
            android:id="@+id/edit_cash_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_cash_amount"
            android:inputType="numberDecimal"
            android:textSize="27sp"/>

...
